# Microprocesadores

./: .gitignore  CMakeLists.txt  README.md
laboratorio_1/: README.md  reto1-1.c  reto1.c  reto2.c  reto3.c
laboratorio_1/data/: archivo.csv
